--- a/backend_new/docker-compose.yml
+++ b/backend_new/docker-compose.yml
@@ -15,6 +15,8 @@ services:
       - SPRING_DATASOURCE_PASSWORD=lytiks_pass
     networks:
       - lytiks-network
+    volumes:
+      - ./photos:/app/photos
 
   mysql:
     image: mysql:8.0
