--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   flutter_map: ^6.1.0
   latlong2: ^0.9.1
   sqflite: ^2.3.0
+  sqflite_common_ffi: ^2.3.0
   path: ^1.8.0
   connectivity_plus: ^5.0.0
   http: ^1.1.0
