--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   http: ^1.1.0
   flutter_secure_storage: ^9.0.0
   shared_preferences: ^2.2.2
+  encrypt: ^5.0.3
 
 dev_dependencies:
   flutter_test:
