--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: Lytiks
+name: lytiks
 description: "Lytiks - Control Inteligente de Plagas para el Agro"
 publish_to: 'none'
 version: 0.1.0
@@ -9,15 +9,15 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  image_picker: ^1.0.4
-  geolocator: ^10.1.0
-  flutter_map: ^6.1.0
+  image_picker: ^1.0.7
+  geolocator: ^11.0.0
+  flutter_map: ^7.0.0
   latlong2: ^0.9.1
-  sqflite: ^2.3.0
-  sqflite_common_ffi: ^2.3.0
-  path: ^1.8.0
-  connectivity_plus: ^5.0.0
-  http: ^1.1.0
+  sqflite: ^2.3.2
+  sqflite_common_ffi: ^2.3.2
+  path: ^1.9.0
+  connectivity_plus: ^6.0.3
+  http: ^1.2.1
   flutter_secure_storage: ^9.0.0
   shared_preferences: ^2.2.2
   encrypt: ^5.0.3
@@ -25,7 +25,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^5.0.0
+  flutter_lints: ^3.0.1
   flutter_launcher_icons: ^0.13.1
 
 # Configuración de íconos personalizados
