--- a/Portal_lytiks/Dockerfile_Portal
+++ b/Portal_lytiks/Dockerfile_Portal
@@ -9,19 +9,12 @@ COPY build/web /usr/share/nginx/html
 # Copiar configuración de Nginx
 COPY nginx.conf /etc/nginx/conf.d/default.conf
 
-# Instalar gettext para envsubst
-RUN apk add --no-cache gettext
-
-# Script para configurar la URL del backend dinámicamente
-RUN echo '#!/bin/sh' > /docker-entrypoint.sh && \
-    echo 'BACKEND_URL=${BACKEND_URL:-http://5.161.198.89:8081}' >> /docker-entrypoint.sh && \
-    echo 'echo "Configurando Backend URL: $BACKEND_URL"' >> /docker-entrypoint.sh && \
-    echo 'find /usr/share/nginx/html -type f -name "*.js" -exec sed -i "s|http://5.161.198.89:8081|$BACKEND_URL|g" {} +' >> /docker-entrypoint.sh && \
-    echo 'nginx -g "daemon off;"' >> /docker-entrypoint.sh && \
-    chmod +x /docker-entrypoint.sh
+# Corregir permisos de los archivos
+RUN chmod -R 755 /usr/share/nginx/html && \
+    chown -R nginx:nginx /usr/share/nginx/html
 
 # Exponer puerto 80
 EXPOSE 80
 
-# Comando por defecto
-CMD ["/docker-entrypoint.sh"]
+# Comando por defecto - Nginx directamente
+CMD ["nginx", "-g", "daemon off;"]
