--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,7 +24,7 @@ dependencies:
   flutter_secure_storage: ^9.0.0
   shared_preferences: ^2.2.2
   encrypt: ^5.0.3
-  workmanager: ^0.5.2
+  workmanager: ^0.9.0+3
   permission_handler: ^11.0.1
 
 dev_dependencies:
