--- a/aqualytiks_api/docker-compose.yml
+++ b/aqualytiks_api/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       - DB_HOST=lytiks-new-mysql
       - DB_PORT=3306
       - DB_USER=root
-      - DB_PASSWORD=cla@ISdb$$26
+      - DB_PASSWORD=cla@ISdb$26
       - DB_NAME=aqualytiks
       - API_PORT=8083
       - SERVER_IP=5.161.198.89
